# dkitle

./: .gitignore  README.md  README.zh.md  build.bat  build.py  build.sh  dkitle.user.js
.github/workflows/: release.yml
dkitle-app/: Cargo.toml  build.rs
dkitle-app/assets/: dkitle.desktop
dkitle-app/assets/macos/: AppIcon.icns  Info.plist
dkitle-app/locales/: en.toml  zh-CN.toml
dkitle-app/src/: main.rs  server.rs  subtitle.rs  ui.rs
dkitle-extension/: background.js  manifest.firefox.json  manifest.json  popup.html  popup.js
dkitle-extension/providers/: bilibili-intercept.js  bilibili.js  intercept-base.js  provider-base.js  youtube-intercept.js  youtube.js
scripts/: generate_icons.py
