[package]
name = "dkitle-app"
version = "0.1.1"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# WebSocket server
axum = { version = "0.8", features = ["ws"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# GUI - iced with dual renderer (wgpu GPU + tiny-skia CPU fallback)
# Cross-platform: Windows, Linux X11, Wayland, macOS
iced = { version = "0.14", default-features = false, features = [
    "linux-theme-detection",
    "x11",
    "wayland",
    "wgpu",
    "tiny-skia",
    "tokio",
] }

# Text measurement (same version as iced's transitive dep)
cosmic-text = "0.15"

# i18n
rust-i18n = "3"
sys-locale = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async stream utilities (for WebSocket split)
futures-util = "0.3"

# Tower for HTTP service
tower-http = { version = "0.6", features = ["cors"] }

[build-dependencies]
winresource = "0.1"
